<resources>
    <string name="app_name">Races 3PT</string>
    <string name="str_hint_email">e-mailadres</string>
    <string name="str_hint_type">type wedstrijd</string>
    <string name="str_hint_locatie">locatie wedstrijd</string>
    <string name="str_hint_datum">datum wedstrijd</string>
    <string name="str_hint_password">wachtwoord</string>
    <string name="noggeenaccount">Nog geen account? Maak één aan</string>
    <string name="wedstrijden">Wedstrijden</string>
    <string name="fotos">Foto\'s</string>
    <string name="mijn_wedstrijden">Mijn wedstrijden</string>
    <string name="voornaam">voornaam</string>
    <string name="achternaam">achternaam</string>
    <string name="email">e-mail</string>
    <string name="paswoord">paswoord</string>
    <string name="registreren">registreren</string>
    <string name="aanmelden">aanmelden</string>
    <string name="foto_homepagina">foto homepagina</string>
    <string name="str_hint_voornaam">voornaam</string>
    <string name="str_hint_achternaam">achternaam</string>
    <string name="str_hint_bevestigwachtwoord"> Bevestig wachtwoord</string>
    <string name="reedsAangemeld">Al een account? Aanmelden</string>
</resources>
