<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="240dp"
            android:layout_height="120dp"
            android:layout_marginTop="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo3pt" />


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <!-- Email -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:hint="@string/email">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/icon_user"
                    android:drawablePadding="10dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- voornaam -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:hint="@string/voornaam">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/voornaam"
                    android:drawableStart="@drawable/icon_user"
                    android:drawablePadding="10dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- achternaam -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:hint="@string/achternaam">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/achternaam"
                    android:drawableStart="@drawable/icon_user"
                    android:drawablePadding="10dp" />

            </com.google.android.material.textfield.TextInputLayout>


            <!-- Wachtwoord -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:hint="@string/paswoord"
                app:layout_constraintEnd_toEndOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/icon_lock"
                    android:drawablePadding="10dp"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <!-- Registreren -->
            <Button
                android:id="@+id/btn_registreren"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorSecondary"
                android:textColor="@color/colorAccent"
                android:text="@string/registreren" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>