<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <!-- TODO: Update blank fragment layout -->

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/foto"
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/foto_homepagina"
                    android:paddingBottom="6dp"
                    app:layout_constraintBottom_toTopOf="@+id/wedstrijd"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/empty"
                    tools:srcCompat="@drawable/empty" />

                <LinearLayout
                    android:id="@+id/wedstrijd"
                    android:layout_width="match_parent"
                    android:layout_height="54dp"
                    android:layout_marginBottom="6dp"
                    android:background="@drawable/ripple_effect"
                    android:gravity="center"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toTopOf="@+id/mijn_wedstrijden"
                    app:layout_constraintTop_toBottomOf="@+id/foto"
                    tools:layout_editor_absoluteX="87dp">

                    <TextView
                        style="@style/home_list"
                        android:layout_margin="6dp"
                        android:text="@string/wedstrijden"
                        android:textColor="@color/white" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/mijn_wedstrijden"
                    android:layout_width="match_parent"
                    android:layout_height="54dp"
                    android:layout_marginBottom="6dp"
                    android:background="@drawable/ripple_effect"
                    android:gravity="center"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toTopOf="@id/fotos"
                    tools:layout_editor_absoluteX="87dp">

                    <TextView
                        style="@style/home_list"
                        android:layout_margin="6dp"
                        android:text="@string/mijn_wedstrijden"
                        android:textColor="@color/white" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/fotos"
                    android:layout_width="match_parent"
                    android:layout_height="54dp"
                    android:background="@drawable/ripple_effect"
                    android:gravity="center"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    tools:layout_editor_absoluteX="87dp">

                    <TextView
                        style="@style/home_list"
                        android:layout_margin="6dp"
                        android:text="@string/fotos"
                        android:textColor="@color/white" />
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

    </FrameLayout>
</layout>