<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".MainActivity">

                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="120dp"
                    android:layout_height="70dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/logo3pt" />


                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="8dp"
                    android:paddingLeft="24dp"
                    android:paddingRight="24dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    app:layout_constraintTop_toBottomOf="@+id/logo">


                    <!-- Email -->
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_marginBottom="8dp"
                        android:hint="@string/str_hint_email">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/text_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableStart="@drawable/ic_email_black_24dp"
                            android:drawableTint="@color/donkerGrijs"
                            android:drawablePadding="10dp"
                            android:singleLine="true"
                            android:textSize="16dp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <!-- voornaam -->
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_marginBottom="8dp"
                        android:hint="@string/str_hint_voornaam">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/text_firstname"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/str_hint_voornaam"
                            android:drawableStart="@drawable/icon_user"
                            android:drawableTint="@color/donkerGrijs"
                            android:drawablePadding="10dp"
                            android:singleLine="true"
                            android:textSize="16dp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <!-- achternaam -->
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_marginBottom="8dp"
                        android:hint="@string/str_hint_achternaam">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/text_lastname"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/str_hint_achternaam"
                            android:drawableStart="@drawable/icon_user"
                            android:drawableTint="@color/donkerGrijs"
                            android:drawablePadding="10dp"
                            android:singleLine="true"
                            android:textSize="16dp" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <!-- Wachtwoord -->
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_marginBottom="8dp"
                        android:hint="@string/str_hint_password"
                        app:layout_constraintEnd_toEndOf="parent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/text_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableStart="@drawable/icon_lock"
                            android:drawableTint="@color/donkerGrijs"
                            android:drawablePadding="10dp"
                            android:inputType="textPassword"
                            android:singleLine="true"
                            android:textSize="16dp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <!-- Wachtwoord Bevestigen -->
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:hint="@string/str_hint_bevestigwachtwoord"
                        app:layout_constraintEnd_toEndOf="parent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/text_password_confirm"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableStart="@drawable/icon_lock"
                            android:drawableTint="@color/donkerGrijs"
                            android:drawablePadding="10dp"
                            android:inputType="textPassword"
                            android:singleLine="true"
                            android:textSize="16dp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <!-- error view -->
                    <TextView
                        android:padding="8dp"
                        android:id="@+id/errorView"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="10dp"
                        android:drawablePadding="10dp"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16dp"
                        tools:text="Er was een probleem bij het registreren."/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                    app:layout_constraintVertical_bias="0.893"
                    tools:layout_editor_absoluteX="0dp">


                    <!-- Registreren -->
                    <Button
                        android:id="@+id/btn_registreren"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/colorPrimary"
                        android:text="@string/registreren" />

                    <!-- Terug naar Aanmelden -->
                    <Button
                        android:id="@+id/btn_alEenAccount"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/reedsAangemeld"
                        android:textColor="@android:color/darker_gray" />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

        <!-- Progress bar, voor als je aanmeldt dat je ziet dat de applicatie bezig is -->
        <include
            android:id="@+id/llProgressBar"
            layout="@layout/layout_progress_bar_with_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
    </RelativeLayout>

</layout>