<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayoutMaakReservatie"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:orientation="vertical"
            tools:context=".MainActivity">

            <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="8dp"
                    android:hint="@string/str_hint_datum">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/kiesDatum"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/date"
                        android:drawablePadding="10dp"
                        android:drawableTint="@color/donkerGrijs"
                        android:singleLine="true"/>
                </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="8dp"
                android:hint="@string/str_hint_type">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/kiesSoort"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_flag"
                    android:drawablePadding="10dp"
                    android:drawableTint="@color/donkerGrijs"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="8dp"
                android:hint="@string/str_hint_locatie">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/kiesLocatie"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_location"
                    android:drawablePadding="10dp"
                    android:drawableTint="@color/donkerGrijs"
                    android:singleLine="true" />

                <Button
                    android:id="@+id/voeg_wed_toe"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:backgroundTint="@color/colorPrimary"
                    android:text="Voeg de wedstrijd toe" />
            </com.google.android.material.textfield.TextInputLayout>

            <!--<TextView
                    android:id="@+id/einduur"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="16dp"
                    android:text="Kies hier de locatie van de wedstrijd"
                    android:textSize="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textPlaats" />-->

        </LinearLayout>
    </ScrollView>
</layout>